--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -150,7 +150,7 @@
         </ul>
     </div>
     <div class="right_section" id="dashboard">
-        <div class="modal" ng-if="showdashboardloader">
+        <div class="modal loaderrstn" ng-if="showdashboardloader">
             <div class="center">
                 <img src="/Content/Assets/images/loader.gif" />
                 
