--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -586,7 +586,7 @@
                                                 </div>
                                                 <span class="characterAllowed">Maximum characters allowed <span id="serviceName_CharacterCount" style="color:red;">250</span></span>
                                                 <div class="servicesTextareaDiv">
-                                                    <textarea class="form-control" placeholder="Service Description" maxlength="500" ng-model="ServiceDescription"></textarea>
+                                                    <textarea class="form-control" placeholder="Service Description" maxlength="500" ng-model="ServiceDescription" ng-blur="updateService()"></textarea>
                                                 </div>
                                             </div>
                                         </div>
@@ -603,13 +603,13 @@
                                         <div class="form-group">
                                             <label class="control-label col-md-4 col-sm-4 col-xs-12">Service Time (mins*)</label>
                                             <div class="col-md-8 col-sm-8 col-xs-12">
-                                                <input type="text" class="form-control" id="text" placeholder="Time in min*" name="ServiceTime" ng-model="UpdateServiceTime" ng-blur="updateService()">
+                                                <input type="text" class="form-control" id="UpdateServiceTime" placeholder="Time in min*" name="ServiceTime" ng-model="UpdateServiceTime" ng-blur="updateService()">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label col-md-4 col-sm-4 col-xs-12">Buffer Time (mins)</label>
                                             <div class="col-md-8 col-sm-8 col-xs-12">
-                                                <input type="text" class="form-control" id="text" placeholder="Time in min" name="text" ng-model="BufferTime">
+                                                <input type="text" class="form-control" id="text" placeholder="Time in min" name="text" ng-model="BufferTime" ng-blur="updateService()">
                                             </div>
                                         </div>
 
