Changes related to Staff,Service section

--- a/AngularMvcProject/App/View/Setting/Staff.html
+++ b/AngularMvcProject/App/View/Setting/Staff.html
@@ -415,7 +415,7 @@
                             </ul>
 
                             <div class="container-fluid staff-details-container appointmentTab">
-                                <div class="tab-content" style="height: 186px;">
+                                <div class="tab-content content_div">
                                     <div class="tab-pane active staffDetailSec" id="staff_details">
 
                                         <div class="customerProfileDiv staffProfileDiv">
@@ -797,7 +797,7 @@
                                                             <div class="timeOffText">
                                                                 <h3 class="serviceProText">Time Off for {{staffName}}:</h3>
 
-                                                                <button class="pull-right btn btn-circle addstaffBtn timeOffPlusBtn" id="timeOffPlusBtn" title="" data-toggle="modal" data-target="#timeoffPopUp"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                                                                <button class="pull-right btn btn-circle addstaffBtn timeOffPlusBtn" id="timeOffPlusBtn" title="" data-toggle="modal" data-target="#timeoffPopUp" ng-click="AddtimeoffPopup"><i class="fa fa-plus" aria-hidden="true"></i></button>
                                                                 <button class="pull-right btn exportBtn btn-circle timeOffPlusBtn" id="exporttimeOffBtn" title="" data-toggle="modal" data-target="#ExportModal">
                                                                     <i class="fa fa-download" aria-hidden="true"></i>
                                                                     Export
