--- a/AngularMvcProject/App/View/Setting/Staff.html
+++ b/AngularMvcProject/App/View/Setting/Staff.html
@@ -797,7 +797,7 @@
                                                             <div class="timeOffText">
                                                                 <h3 class="serviceProText">Time Off for {{staffName}}:</h3>
 
-                                                                <button class="pull-right btn btn-circle addstaffBtn timeOffPlusBtn" id="timeOffPlusBtn" title="" data-toggle="modal" data-target="#timeoffPopUp" ng-click="AddtimeoffPopup"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                                                                <button class="pull-right btn btn-circle addstaffBtn timeOffPlusBtn" id="timeOffPlusBtn" title="" data-toggle="modal" data-target="#timeoffPopUp" ng-click="AddtimeoffPopup()"><i class="fa fa-plus" aria-hidden="true"></i></button>
                                                                 <button class="pull-right btn exportBtn btn-circle timeOffPlusBtn" id="exporttimeOffBtn" title="" data-toggle="modal" data-target="#ExportModal">
                                                                     <i class="fa fa-download" aria-hidden="true"></i>
                                                                     Export
